--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t gmathis96/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t $DOCKER_ID/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run gmathis96/react-test npm test -- --coverage
+  - docker run $DOCKER_ID/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t gmathis96/multi-client ./client
-  - docker build -t gmathis96/multi-nginx ./nginx
-  - docker build -t gmathis96/multi-server ./server
-  - docker build -t gmathis96/multi-worker ./worker
+  - docker build -t $DOCKER_ID/multi-client ./client
+  - docker build -t $DOCKER_ID/multi-nginx ./nginx
+  - docker build -t $DOCKER_ID/multi-server ./server
+  - docker build -t $DOCKER_ID/multi-worker ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push gmathis96/multi-client
-  - docker push gmathis96/multi-nginx
-  - docker push gmathis96/multi-server
-  - docker push gmathis96/multi-worker
+  - docker push $DOCKER_ID/multi-client
+  - docker push $DOCKER_ID/multi-nginx
+  - docker push $DOCKER_ID/multi-server
+  - docker push $DOCKER_ID/multi-worker
