Added AWS configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,16 @@ after_success:
   - docker push $DOCKER_ID/multi-nginx
   - docker push $DOCKER_ID/multi-server
   - docker push $DOCKER_ID/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "multi-docker"
+  env: "MultiDocker-env-1"
+  bucket_name: "elasticbeanstalk-us-east-2-053320336992"
+  bucket_path: "multi-docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
